<resources>
    <string name="app_name">WordsMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_test">test</string>
    <string name="action_delete">del</string>
    <string name="action_study">study</string>
    <string name="action_select_all">all</string>
    <string name="action_import_book">import</string>
    <string name="action_import_book_other">import link</string>

    <string name="action_card">card</string>
    <string name="action_starred_only">starred</string>
    <string name="action_starred_all">all</string>
    <string name="action_order_test">test</string>
    <string name="action_play">play</string>
    <string name="action_stop">stop</string>

    <string name="action_order_type_spelling">spelling</string>
    <string name="action_order_type_phonetic">phonetic</string>

    <string name="nav_item_attachment">Attachment</string>
    <string name="nav_item_images">Images</string>
    <string name="nav_item_location">My Location</string>
    <string name="nav_sub_menu">Sub Menu</string>
    <string name="nav_sub_menu_item01">Sub Menu Item 1</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="drawer_header_text">Drawer Header</string>
    <string name="second_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consectetur diam id aliquam scelerisque. Donec ultrices lacus vel dignissim pharetra. Vivamus pharetra augue quis rhoncus placerat. Sed ultricies at risus non cursus. Nam rutrum leo nec placerat consectetur. Vestibulum feugiat eleifend diam, nec interdum augue tincidunt sit amet. Praesent feugiat est auctor lacus consectetur, vitae pellentesque dolor laoreet.</string>

    <string name="title_activity_second">SecondActivity</string>
    <string name="title_book_list">Book List</string>
    <string name="title_word_list">List Mode</string>
    <string name="title_word_card">Card Mode</string>
    <string name="title_sheet_list">Sheet List</string>
    <string name="title_order_test">Order test</string>
</resources>
