<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_import"
        android:title="@string/action_import_book"
        app:showAsAction = "ifRoom"/>

    <item android:id="@+id/action_import_other"
        android:title="@string/action_import_book_other"
        app:showAsAction = "never"/>



    <item android:id="@+id/action_all"
        android:title="@string/action_select_all"
        app:showAsAction = "ifRoom"/>

    <item android:id="@+id/action_study"
        android:title="@string/action_study"
        app:showAsAction = "ifRoom"/>

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction = "ifRoom"/>

</menu>